addGetFilmById_v1.7